fixed margins on rooms and overflow issue with responsive rooms

--- a/styles/style.css
+++ b/styles/style.css
@@ -156,8 +156,12 @@ footer {
 }
 
 .rooms {
+    margin-left: -10px;
+    margin-right: -10px;
+}
+
+.wrap {
     flex-wrap: wrap;
-    margin: -5px;
 }
 
 h1,
